# optothermal_processing

./: .gitignore  AGENTS.md  BENCHMARK_RESULTS_PAIRWISE.md  CLAUDE.md  CLI_ROADMAP_TRACKER.md  GEMINI.md  IMPLEMENTATION_PLAN_METRICS_OPTIMIZATION.md  NOTES_GENERAL_BRANCH.md  NOTE_per_direction_mobility_2026-05-12.md  NOTE_trapping_hypothesis_investigation_2026-05-12.md  PHASE2_CACHING_CONTEXT_IMPLEMENTATION.md  QT_DARK_STYLE_GUIDE.md  README.md  REFACTOR_MANIFEST_COLUMNS.md  SUITE_COMMANDS.md  TUI_REORGANIZATION_PLAN.md  batch_plot_draft.py  benchmark_direct_results.txt  benchmark_results.txt  data.dvc  history.csv  history.json  plot_generation_fix.txt  plot_iteration_decay_alisson81.py  pyproject.toml  requirements.txt  run_alisson67_plots.sh  run_alisson68_plots.sh  run_alisson75_plots.sh  test_inverse_plots.sh  test_phase1.py  test_plotext_tui.py  tui_app.py  tui_functionality_update.txt  update.md
.dvc/: config
bash/: COMPARISON.md  FIX_STRING_COLUMNS.md  QUICKSTART.md  alisson67_analysis_v2.sh  analyze_chip.sh  program.md
config/: chip_apps.yaml  chip_params.yaml  cli_plugins.yaml  encap_characteristics.yaml  procedures.yml
docs/: ADDING_NEW_METRICS_GUIDE.md  ADDING_NEW_MODELS_GUIDE.md  ADDING_PROCEDURES.md  ANALYSIS_WORKFLOW_IMPROVEMENTS.md  BATCH_PLOTTING_GUIDE.md  BATCH_PLOTTING_INTEGRATION.md  BATCH_PLOTTING_QUICK_REFERENCE.md  BUILDING_BATCH_PLOT_PIPELINES.md  CLI_MODULE_ARCHITECTURE.md  CLI_PLUGIN_SYSTEM.md  CNP_EXTRACTOR_GUIDE.md  CONFIGURATION.md  CONFIG_LAYER_IMPLEMENTATION_PROMPT.md  CONSECUTIVE_SWEEP_DIFFERENCING_PLAN.md  DATA_CACHING_GUIDE.md  (+43 more)
(+2177 files in other folders)
